--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --respawn src/index.ts",
     "build": "rimraf ./dist && tsc",
-    "start": "node ./dist/index.js"
+    "start": "npm run build && node ./dist/index.js"
   },
   "prisma": {
     "seed": "ts-node-dev prisma/seed.ts"
