se eliminan datos

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,7 @@
 PORT=3001
 NODE_ENVIROMENT=local
-NODE_SAMESITE=lax
-SESSION_SECRET=My53Cre7T0kEn1609143x3App
-GOOGLE_CLIENT_ID=770687970922-8stij3k0grk3j04297ajvi6lv1um76eh.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
-# DATABASE_URL=mongodb://0.0.0.0:27017/structure-ts  LOCAL
-DATABASE_URL=mongodb+srv://eduardobk:l6NHEONIEfth7OiP@testduox.cyrnlpz.mongodb.net/phisio_dev
+DATABASE_URL=url_mongo
 COOKIE_NAME=AuthUser
-
 
 #URL SISTEM
 BASE_URL=http://localhost:3001
